[package]
name = "stun_client"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[[bin]]
#name = "pusher_test"
#path = "src/pusher_test/main.rs"

[dependencies]
rand = "0.8.5"
tokio = { version = "1.33.0", features = ["full", "rt"] }
serde_json = "1.0.108"
#futures = { version = "0.3.29", features = ["async-await"], optional = true }
futures = { version = "0.3.29", features = ["async-await", "executor"] }
pusher = "0.4.5"
async-std = "1.12.0"
url = "2.4.1"
futures-util = "0.3.29"
futures-channel = "0.3.29"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
websocket = "0.27.0"
hyper = { version = "0.14.27", features = ["client", "http1", "http2", "runtime", "server"] }
log = "0.4.20"
simple_logger = { version = "4.2.0", features = ["colors"] }